do not set last_page on key view

--- a/src/panhandler/templates/panhandler/import_repo.html
+++ b/src/panhandler/templates/panhandler/import_repo.html
@@ -2,7 +2,7 @@
 {% block head %}
     <style>
         .table td {
-            border-top: 0px;
+            border-top: 0;
         }
     </style>
     <script type="text/javascript">
