--- a/src/panhandler/templates/panhandler/edit_skillet.html
+++ b/src/panhandler/templates/panhandler/edit_skillet.html
@@ -27,6 +27,8 @@
 
         var skillet_snippets = JSON.parse('{{ skillet.snippet_stack | tojson | escapejs }}');
 
+        var current_snippet_index = 0;
+
         function add_label(key, value) {
             let label_base = $('#label_base');
             let all_labels = $('#all_labels');
@@ -1093,6 +1095,12 @@
             if (context_object.val() === '') {
                 context_object.val(JSON.stringify(initial_context, null, '  '));
             }
+            current_snippet_index = 0;
+            let next_snippet = skillet_snippets[current_snippet_index];
+
+            let id_test_skillet_next_input = $('#id_test_skillet_next');
+            id_test_skillet_next_input.val(next_snippet['name']);
+            $('#step_over_skillet_button').show();
 
             $('#show_test_skillet_modal').modal();
 
@@ -1224,6 +1232,76 @@
 
                     hljs.highlightBlock(results_code[0]);
 
+                });
+        }
+
+        function step_over_skillet() {
+            /**
+             * Post the skillet to app server to execute and test the skillet. Only works on 'pan' type skillets
+             * for now.
+             */
+
+            let doc = $(document.documentElement);
+            doc.css('cursor', 'progress');
+
+            update_skillet_from_ui();
+
+            let context_input = $('#id_test_skillet_context');
+            let context = context_input.val();
+
+            let context_var = {};
+            try {
+                context_var = JSON.parse(context);
+            } catch (e) {
+                alert('Could not convert Context into proper JSON!');
+                return false;
+            }
+            let current_snippet = skillet_snippets[current_snippet_index];
+            let test_skillet = skillet;
+
+            test_skillet['snippets'] = [current_snippet];
+
+            current_snippet_index += 1;
+
+            let id_test_skillet_next_input = $('#id_test_skillet_next');
+
+            let next_snippet = skillet_snippets[current_snippet_index];
+
+            if (typeof next_snippet === 'undefined') {
+                $('#step_over_skillet_button').hide();
+                id_test_skillet_next_input.val('Completed');
+                current_snippet_index = 0;
+            } else {
+                id_test_skillet_next_input.val(next_snippet['name']);
+            }
+
+            $.ajax({
+                method: "POST",
+                url: "/panhandler/test_skillet",
+                headers: {'X-CSRFToken': '{{ csrf_token }}'},
+                contentType: "application/json",
+                dataType: "json",
+                data: JSON.stringify({"skillet": test_skillet, "context": context_var})
+            })
+                .fail(function (message) {
+                    alert('error');
+                    console.log(message);
+                    doc.css('cursor', '');
+                })
+                .done(function (data) {
+                    doc.css('cursor', '');
+                    let context = JSON.stringify(data['context'], null, '  ');
+                    let output = JSON.stringify(data['output'], null, '  ');
+                    {#if (Object.keys(data['output']['snippets']).length === 0) {#}
+                    {#    output = 'Snippet was skipped due to when conditional';#}
+                    {#}#}
+                    console.log(context);
+                    let context_input = $('#id_test_skillet_context');
+                    let outputs_input = $('#id_test_skillet_outputs');
+                    context_input.val(context);
+                    outputs_input.val(output);
+                    context_input.effect('highlight');
+                    outputs_input.effect('highlight');
                 });
         }
 
@@ -2572,7 +2650,7 @@
     <div class="modal fade" id="show_test_skillet_modal" tabindex="-1" role="dialog"
          aria-labelledby="show_test_skillet_modal"
          aria-hidden="true">
-        <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="test_skillet_label">Test Skillet</h5>
@@ -2585,19 +2663,44 @@
                         This will execute the skillet using the provided context. This is a great place to
                         explore output capturing and other syntax options before saving your skillet.
                     </p>
-                    <label for="id_test_skillet_context">Context:</label>
-                    <textarea class="form-control" rows="5" id="id_test_skillet_context"></textarea>
-                    <p class="small muted text-right m-0">
-                        <a href="#" onclick="enlarge_text_area('id_test_skillet_context')">
-                            <i class="fa fa-edit"></i>
-                        </a>
-                    </p>
-                    <input type="hidden" id="id_test_skillet_results"/>
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label for="id_test_skillet_context">Context:</label>
+                            <textarea class="form-control" rows="10" id="id_test_skillet_context"></textarea>
+                            <p class="small muted text-right m-0">
+                                <a href="#" onclick="enlarge_text_area('id_test_skillet_context')">
+                                    <i class="fa fa-edit"></i>
+                                </a>
+                            </p>
+                            <input type="hidden" id="id_test_skillet_results"/>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="id_test_skillet_outputs">Outputs:</label>
+                            <textarea class="form-control" rows="10" id="id_test_skillet_outputs"></textarea>
+                            <p class="small muted text-right m-0">
+                                <a href="#" onclick="enlarge_text_area('id_test_skillet_outputs')">
+                                    <i class="fa fa-edit"></i>
+                                </a>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="id_test_skillet_next">Next Snippet:</label>
+                        <div class="input-group mb-3">
+                        <input type="text" value="" disabled="disabled"
+                              class="form-control disabled" id="id_test_skillet_next">
+                        <div class="input-group-append" id="step_over_skillet_button">
+                            <span class="input-group-text" title="Execute Next Snippet">
+                                <a href="#" onclick="step_over_skillet();">
+                                    <i class="fa fa-step-forward"></i>
+                                </a>
+                            </span>
+                        </div>
+                    </div>
+
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" onclick="test_skillet()">Test
-                    </button>
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Dismiss</button>
                 </div>
             </div>
         </div>
